Fix: Add margin to account page title to avoid nav overlap

--- a/src/features/userAccount/pages/userAccountPage.module.css
+++ b/src/features/userAccount/pages/userAccountPage.module.css
@@ -11,3 +11,15 @@
 .descriptor > p {
   font-style: italic;
 }
+
+@media (min-width: 320px) {
+  .descriptor {
+    margin: 20px 0px 50px 0px;
+  }
+}
+
+@media (min-width: 991px) {
+  .descriptor {
+    margin: 120px 0px 50px 0px;
+  }
+}
